<resources>
    <string name="app_name">Calculadora</string>
    <string name="c">C</string>
    <string name="abrir_parenteses">(</string>
    <string name="fechar_parenteses">)</string>
    <string name="elevado">^</string>
    <string name="divisao">/</string>
    <string name="multiplicacao">X</string>
    <string name="subtracao">-</string>
    <string name="adicao">+</string>
    <string name="virgula">,</string>
    <string name="igual">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>

    <string name="calculadora">Calculadora</string>
    <string name="historico">Histórico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>